gitのボタンにurl追加

--- a/pages_HTML/works.html
+++ b/pages_HTML/works.html
@@ -67,7 +67,7 @@
                         お問合せフォームについては、PHPにてメール送信処理を実装予定です。
                         
                     </p>
-                    <a class="github-btn" href="https://github.com/Minami03harps">GitHubで見る</a>
+                    <a class="github-btn" href="https://github.com/Minami03harps/MyPortfolio">GitHubで見る</a>
             </article>
             <article id="work2">
                     <h4 class="article-title">[架空]寝具サイト</h4>
@@ -84,7 +84,7 @@
                         JavaScriptで実装しました。
                         レスポンシブでのJavaScript実装による画面崩れがありましたが、その改善策や原因を自身で仮定して考え、調べながら処理を書いたことによりレスポンシブ対応の知識が深まりました。                    
                     </p>
-                    <a class="github-btn" href="https://github.com/Minami03harps">GitHubで見る</a>
+                    <a class="github-btn" href="https://github.com/Minami03harps/MyPortfolio">GitHubで見る</a>
             </article>
         </div>
     </main>
